...
                        Column (
                            horizontalAlignment = Alignment.CenterHorizontally
                        ) {
                            TextField(
                                value = collectorUser,
                                onValueChange = {collectorUser = it},
                                label = { Text(text = "Digíte su correo")}
                            )
                            Button(
                                onClick = { localContext.startActivity(Intent(localContext, CollectorMenuActivity::class.java)) },
                                modifier = Modifier.padding(top = 20.dp)
                            ){
                                Text(text = "Identificarse")
                            }
                        }

                    }

                }
...
