...
                    style = TextStyle(
                        fontWeight = FontWeight.SemiBold,
                        fontStyle = FontStyle.Italic,
                        fontSize = 16.sp,
                        color = Color.White
                    ),
                    modifier = Modifier.testTag("CollectorDetailToolBarName")
                )
                Text(
                    text = "Coleccionista",
                    color = Color.White,
                    style = TextStyle(
                        fontWeight = FontWeight.Light,
...
